# sdp-static-website-template

./: .bandit  .gitignore  README.md  catalog-info.yaml  freeze.py  generate_mk_docs.sh  get_design_system.sh  mkdocs.yml  pyproject.toml  run_py_tools.sh
.github/workflows/: reusable.yml
config/: website_config.json
content/: about.md  accessibility.md  page_1.md  page_2.md  page_3.md  privacy_data.md
content/website_config/: website_type.json
docs/external_content/: mkdocs_page3.md
docs/internal_content/: mkdocs_page1.md  mkdocs_page2.md
docs/templates/: main.html
docs/templates/static/assets/stylesheets/: main.9d5733d3.min.css
static_website_builder/: __init__.py  page.py  utils.py
static_website_builder/python_example/: hello.py
static_website_builder/templates/: 404.html  about.html  accessibility_statement.html  cookies.html  core.html  index.html  index_mkdocs.html  mkdocs_page1.html  mkdocs_page2.html  mkdocs_page3.html  page_1.html  page_2.html  page_3.html  privacy_data.html  sidebar.html
