[tool.poetry]
name = "static_website_builder"
version = "0.1.0"
description = ""
authors = ["sanjeevz3009 <sanjeevz1717@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
frozen-flask = "^0.18"
markdown = "^3.2.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pylint = "^2.17.5"
bandit = "^1.7.5"
black = "^23.7.0"
isort = "^5.12.0"
mkdocs = "1.4.0"
mkdocstrings = "0.24.0"
mkdocs-embed-external-markdown="2.3.0"
mkdocs-markdownextradata-plugin="0.2.5"
python-markdown-math="*"
mkdocs-material="*"
importlib-metadata="4.2.0"
werkzeug = "2.3.7"
mkdocstrings-python = "*"

[project]
dependencies = [
    "mkdocstrings-python",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
